examples/test/testpolicy4688.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4688
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key37: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value13
          key3: value49
          key45: value34
      podSelector:
        matchLabels:
          key9: value0
          key1: value20
          key34: value31
